syntax = "proto3";
import "object_state.proto";
import "representation.proto";

package obj_defs;

message RecalculateInput {
    repeated object_state.ObjectMsg objects = 1;
}

message RecalculateOutput {
    repeated object_state.ObjectMsg objects = 1;
}

message ClientRepresentationInput {
    object_state.ObjectMsg object = 1;
}

message ClientRepresentationOutput {
    representation.UpdateOutputMsg output = 1;
}

service ObjDef {
    rpc Recalculate(RecalculateInput) returns (RecalculateOutput);
    rpc ClientRepresentation(ClientRepresentationInput) returns (ClientRepresentationOutput);
}