syntax = "proto3";

import "geom.proto";

package representation;

message MeshDataMsg
{
    repeated double positions = 2;
    repeated uint64 indices = 3;
    string meta_json = 4;
}

message InstanceDataMsg
{
    repeated double transform = 2;
    geom.Point3Msg bottom_left = 3;
    geom.Point3Msg top_right = 4;
    string source = 5;
    string meta_json = 6;
}

message RGBAMsg
{
    uint32 r = 1;
    uint32 g = 2;
    uint32 b = 3;
    float a = 4;
}

message DrawElement2DMsg
{
    oneof element {
        geom.Line2DMsg line = 1;
        geom.Arc2DMsg arc = 2;
        geom.Rect2DMsg rect = 3;
        geom.Poly2DMsg poly = 4;
    }
    float line_thickness = 5;
    RGBAMsg line_color = 6;
    oneof fill_type {
        RGBAMsg fill_solid = 7;
        string hatch = 8;
    }
    oneof line_type {
        string line_solid = 9;
        string dashed = 10;
    }
}

message DrawingDataMsg
{
    repeated DrawElement2DMsg elements = 1;
}

message DrawingViewsMsg
{
    DrawingDataMsg top = 1;
    DrawingDataMsg front = 2;
    DrawingDataMsg left = 3;
    DrawingDataMsg right = 4;
    DrawingDataMsg back = 5;
    DrawingDataMsg bottom = 6;
}

message UpdateOutputMsg
{
    oneof output {
        string empty = 1;
        string delete = 2;
        MeshDataMsg mesh = 3;
        string file_ref = 4;
        InstanceDataMsg instance = 5;
        string other_json = 6;
    }
    DrawingViewsMsg views = 7;
}

message UpdateChangeMsg
{
    string file = 1;
    string user = 2;
    uint64 change = 3;
    string obj_id = 4;
    UpdateOutputMsg update = 5;
}


